bk_ida/gccida/c2/diagnostic_finish
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/diagnostic_finish/src/diagnostic.c:1768:26: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
void  diagnostic_finish( output_buffer_0 *buffer) 
                         ^~~~~~~~~~~~~~~
                         output_buffer
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/diagnostic_finish/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/diagnostic_finish/src/diagnostic.c:1790:12: error: expected expression
*( _OWORD *)&buffer->state.cursor = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/diagnostic_finish/src/diagnostic.c:1790:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&buffer->state.cursor = 0LL; 
   ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/diagnostic_finish/src/obj/diagnostic.o] Error 1
